--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,8 @@ pre {
   font-size: 15px;
   line-height: 1.6;
   margin-bottom: 1.6em;
-  max-width: 100%;
+  height: 300px;
+  width: 600px;
   overflow: auto;
   padding: 1em 1.5em;
   display: block;
